--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,11 +3,10 @@ getCopyrightYear = function() {
   return (new Date()).getFullYear();
 }
 %>
-  <script src="/static/js/jquery-3.5.1.min.js"></script>
   <script src="/static/js/bootstrap.bundle.min.js"></script>
 </body>
 
-<footer>
+<footer class="footer-padding">
   <small>Copyright &copy; <%= getCopyrightYear() %> CodingJosh</small>
 </footer>
 
