--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>CodingJosh's Anime Stats</title>
   <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/css/app/app.css">
+  <script src="/static/js/jquery-3.5.1.min.js"></script>
 </head>
 
 <body>
   <nav class="navbar navbar-dark bg-dark">
     <span class="navbar-brand mb-0 h1">CodingJosh's Anime Stats</span>
   </nav>
-  
