--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,8 @@
 <%- include("header.ejs") -%>
-<div id="content">
-  <h1>PogChamp</h1>
+<div id="content" class="container">
+  <h1>Welcome!</h1>
+  <p>This app will show you some interesting stats from your watchlist.</p>
+  <button type="button" id="loginButton" class="btn btn-info btn-lg">Log in with MyAnimeList</button>
 </div>
+<script src="/static/js/app/index.js"></script>
 <%- include("footer.ejs") %>
