Got auth working and started work on main app page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,10 @@
 <%- include("header.ejs") -%>
 <div id="content" class="container">
   <h1>Welcome!</h1>
-  <p>This app will show you some interesting stats from your watchlist.</p>
+  <p>This app will show you some interesting stats from your anime watchlist.</p>
   <button type="button" id="loginButton" class="btn btn-info btn-lg">Log in with MyAnimeList</button>
+  <br/>
+  <small>You will be taken to MyAnimeList to authenticate/authorize.</small>
 </div>
 <script src="/static/js/app/index.js"></script>
 <%- include("footer.ejs") %>
