Reworked authorization to use session.

--- a/views/auth_error.ejs
+++ b/views/auth_error.ejs
@@ -4,6 +4,8 @@
   <p><%= errorData.message %></p>
   <small>HTTP <%= errorData.httpCode %></small>
   <br/>
+  <small>State: <%= errorData.state %> </small>
+  <br/>
   <button type="button" id="retryButton" class="btn btn-secondary btn-lg">Go Back Home</button>
 </div>
 <script>
