--- a/views/main.ejs
+++ b/views/main.ejs
@@ -3,8 +3,11 @@
   <h1>Hello World!</h1>
 </div>
 <script>
-  $(document).ready(function() {
-    window.localStorage.setItem("code", "<%= code %>");
+  $(document).ready(function () {
+    var tokenData = JSON.parse(`<%- JSON.stringify(tokenData) %>`);
+    for (const property in tokenData) {
+      window.localStorage.setItem(`${property}`, `${tokenData[property]}`);
+    }
   });
 </script>
 <script src="/static/js/app/main.js"></script>
