Fixed token storage to be in session. Also added saved sessions.

--- a/views/auth_error.ejs
+++ b/views/auth_error.ejs
@@ -9,6 +9,11 @@
   <button type="button" id="retryButton" class="btn btn-secondary btn-lg">Go Back Home</button>
 </div>
 <script>
+  $(document).ready(function() {
+    // Clear local storage to remove old session.
+    window.localStorage.clear();
+  });
+
   $("#retryButton").click(function() {
     window.location.href = "/";
   });
