--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <div id="content" class="container">
   <h1>Welcome!</h1>
   <p>This app will show you some interesting stats from your anime watchlist.</p>
-  <button type="button" id="loginButton" class="btn btn-info btn-lg">Log in with MyAnimeList</button>
+  <button type="button" id="loginButton" class="btn btn-info btn-lg">Let's get started!</button>
   <br/>
   <small>You will be taken to MyAnimeList to authenticate/authorize.</small>
 </div>
