Added cookies message (gotta be EU friendly)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,9 @@
   <button type="button" id="loginButton" class="btn btn-info btn-lg">Let's get started!</button>
   <br/>
   <small>You will be taken to MyAnimeList to authenticate/authorize.</small>
+  <br/>
+  <br/>
+  <p><small><strong>Cookies Notice:</strong> This website uses cookies and local storage to synchronize your session with the server and to help provide a better user experience.<br/>This application does not use cookies for advertisements.<br/>Your usage constitues agreement to using cookies and local storage.</small></p>
 </div>
 <script src="/static/js/app/index.js"></script>
 <%- include("footer.ejs") %>
