Started work on the main part of the app.

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,5 +12,5 @@
 
 <body>
   <nav class="navbar navbar-dark bg-dark">
-    <span class="navbar-brand mb-0 h1">CodingJosh's Anime Stats</span>
+    <span class="navbar-brand mb-0 h1">CodingJosh's Anime Stats (Beta)</span>
   </nav>
