--- a/static/css/app/app.css
+++ b/static/css/app/app.css
@@ -1,3 +1,21 @@
 .footer-padding {
   padding-left: 10px;
 }
+
+#avatarImage {
+  border-radius: 50%;
+  width: 5%;
+  height: auto;
+}
+
+#userPanel {
+  display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  #avatarImage {
+    border-radius: 50%;
+    width: 15%;
+    height: auto;
+  }
+}
