--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/static/css/bootstrap.min.css">
   <link rel="stylesheet" href="/static/css/app/app.css">
   <script src="/static/js/jquery-3.5.1.min.js"></script>
+  <script src="/static/js/app/util.js"></script>
 </head>
 
 <body>
