--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -8,7 +8,8 @@ getCopyrightYear = function() {
 </body>
 
 <footer class="footer-padding">
-  <small>Copyright &copy; <%= getCopyrightYear() %> CodingJosh</small>
+  <small>Copyright &copy; <%= getCopyrightYear() %> CodingJosh</small><br/>
+  <small>All GIFs are copyrights of their respective owner(s).</small>
 </footer>
 
 </html>
