--- a/views/main.ejs
+++ b/views/main.ejs
@@ -8,7 +8,7 @@
   <div id="loadingZone">
     <h1 class="text-center" id="loadingText">Starting the application...</h1>
     <p class="text-center">
-
+      <img id="loadingImage">
     </p>
   </div>
 </div>
