Make GIFs more responsive for mobile

--- a/views/auth_error.ejs
+++ b/views/auth_error.ejs
@@ -2,7 +2,7 @@
 <div id="content" class="container">
   <h1><%= errorData.title %></h1>
   <p><%= errorData.message %></p>
-  <img id="errorImage" style="display: block;">
+  <img id="errorImage" style="display: block;" class="imageResponsive">
   <small>HTTP <%= errorData.httpCode %></small>
   <br/>
   <small>State: <%= errorData.state %> </small>
