Added error text when trying to authorize and MAL is down

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -8,8 +8,11 @@ getCopyrightYear = function() {
 </body>
 
 <footer class="footer-padding">
-  <small>Copyright &copy; <%= getCopyrightYear() %> CodingJosh</small><br/>
-  <small>All GIFs are copyrights of their respective owner(s).</small>
+  <small>Copyright &copy; <%= getCopyrightYear() %> CodingJosh &mdash; <a href="https://myanimelist.net/profile/CodingJosh" target="_blank">MAL Profile</a></small>
+  <br/>
+  <small>This website is not affiliated or endorsed by MyAnimeList or any anime studio/producer.</small>
+  <br/>
+  <small>All anime GIFs and images are copyrights of their respective owner(s).</small>
 </footer>
 
 </html>
