--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,20 @@
 <%- include("header.ejs") -%>
-<div id="content" class="container">
-  <h1>Welcome!</h1>
-  <p>This app will show you some interesting stats from your anime watchlist.</p>
-  <button type="button" id="loginButton" class="btn btn-info btn-lg">Let's get started!</button>
-  <br/>
-  <small>You will be taken to MyAnimeList to authenticate/authorize.</small>
-  <br/>
-  <br/>
-  <p><small><strong>Cookies Notice:</strong> This website uses cookies and local storage to synchronize your session with the server and to help provide a better user experience.<br/>This application does not use cookies for advertisements.<br/>Your usage constitues agreement to using cookies and local storage.</small></p>
-</div>
-<script src="/static/js/app/index.js"></script>
-<%- include("footer.ejs") %>
+  <div id="content" class="container">
+    <h1>Welcome!</h1>
+    <p>This app will show you some interesting stats from your anime watchlist.</p>
+    <button type="button" id="loginButton" class="btn btn-info btn-lg">Let's get started!</button>
+    <br />
+    <small id="errorText"></small>
+    <small>You will be taken to MyAnimeList to authenticate/authorize.</small>
+    <br />
+    <br />
+    <p>
+      <small>
+        <strong>Cookies Notice:</strong> This website uses cookies and local storage to synchronize your session
+        with the server and to help provide a better user experience.<br />Your usage constitues agreement to using
+        cookies and local storage.
+      </small>
+    </p>
+  </div>
+  <script src="/static/js/app/index.js"></script>
+  <%- include("footer.ejs") %>
