--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>CodingJosh's Anime Stats</title>
+  <title>AnimeStats for MAL</title>
   <link rel="stylesheet" href="/static/css/bootstrap.min.css">
   <link rel="stylesheet" href="/static/css/app/app.css">
   <script src="/static/js/jquery-3.5.1.min.js"></script>
@@ -13,5 +13,5 @@
 
 <body>
   <nav class="navbar navbar-dark bg-dark">
-    <span class="navbar-brand mb-0 h1">CodingJosh's Anime Stats (Beta)</span>
+    <span class="navbar-brand mb-0 h1">AnimeStats for MAL by CodingJosh (Beta) </span>
   </nav>
