--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include("header.ejs") -%>
   <div id="content" class="container">
     <h1>Welcome!</h1>
-    <p>This app will show you some interesting stats from your anime watchlist.</p>
+    <p>This app will show you interesting statistics from your anime watchlist.</p>
     <button type="button" id="loginButton" class="btn btn-info btn-lg">Let's get started!</button>
     <br />
     <small id="errorText"></small>
