--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
     <small>You will be taken to MyAnimeList to authenticate/authorize.</small>
     <br />
     <br />
+    <h4 id="ieDetectionText"></h4>
     <p>
       <small>
         <strong>Cookies Notice:</strong> This website uses cookies and local storage to synchronize your session
