Started work on displaying data

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -11,6 +11,11 @@
       <img id="loadingImage" class="imageResponsive">
     </p>
   </div>
+
+  <div id="dataZone">
+    
+  </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
 <script src="/static/js/app/main.js"></script>
 <%- include("footer.ejs") %>
