--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,6 +7,7 @@
   <title>AnimeStats for MAL</title>
   <link rel="stylesheet" href="/static/css/bootstrap.min.css">
   <link rel="stylesheet" href="/static/css/app/app.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.css" rel="stylesheet">
   <script src="/static/js/jquery-3.5.1.min.js"></script>
   <script src="/static/js/app/util.js"></script>
 </head>
