--- a/views/main.ejs
+++ b/views/main.ejs
@@ -13,9 +13,11 @@
   </div>
 
   <div id="dataZone">
-    
+    <%- include("data.ejs") %>
   </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
+<script src="https://d3js.org/d3.v5.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.js"></script>
+<script src="/static/js/app/process.js"></script>
 <script src="/static/js/app/main.js"></script>
 <%- include("footer.ejs") %>
