Added more stats and updated layout.

--- a/views/data.ejs
+++ b/views/data.ejs
@@ -8,9 +8,16 @@
 </div>
 <div class="row">
   <div class="col">
+    <h5>Breakdown by Anime Type</h5>
+    <div id="animeTypesChart"></div>
+  </div>
+</div>
+<hr>
+<div class="row">
+  <div class="col">
     <h5 class="text-center">How long have you spent watching anime?</h5>
     <p>You have spent a grand total of <strong><span id="grandTotalText"></span></strong> seconds watching anime.</p>
-    <span>
+    <div>
       Which is...
       <p id="yearsSpan"><span id="yearsText" class="durationText"></span> <span id="yearsLabel">years</span></p>
       <p id="monthsSpan"><span id="monthsText" class="durationText"></span> <span id="monthsLabel">months</span></p>
@@ -19,19 +26,17 @@
       <p id="hoursSpan"><span id="hoursText" class="durationText"></span> <span id="hoursLabel">hours</span></p>
       <p id="minutesSpan"><span id="minutesText" class="durationText"></span> <span id="minutesLabel">minutes</span> and</p>
       <p id="secondsSpan"><span id="secondsText" class="durationText"></span> <span id="secondsLabel">seconds</span></p>
-    </span>
+      <p id="daysCombinedSpan">or simply put <span id="daysCombinedText" class="durationText"></span> <span id="daysCombinedLabel"></span></p>
+    </div>
   </div>
   <div class="col">
+    <img class="imageResponsive" src="https://cdn.codingjosh.com/anime_stats/misc/umaru_tv.png">
+    <p>Life Pro Tip: The time you enjoy wasting, is not wasted time.</p>
   </div>
 </div>
+<hr>
 <div class="row">
   <div class="col">
-    <h1>test 1</h1>
-  </div>
-  <div class="col">
-    <h1>test 2</h1>
-  </div>
-  <div class="col">
-    <h1>test 3</h1>
+
   </div>
 </div>
