Added toggle for showing plan_to_watch on anime types

--- a/views/data.ejs
+++ b/views/data.ejs
@@ -8,8 +8,12 @@
 </div>
 <div class="row">
   <div class="col">
-    <h5>Breakdown by Anime Type</h5>
+    <h5>Let's break it down by Media Type:</h5>
     <div id="animeTypesChart"></div>
+  </div>
+  <div class="form-check">
+    <input type="checkbox" class="form-check-input" id="animeTypesIncludePlanCheckbox" name="animeTypesIncludePlanCheckbox" checked>
+    <label class="form-check-label" for="animeTypesIncludePlanCheckbox">Include Plan to Watch</label>
   </div>
 </div>
 <hr>
@@ -33,10 +37,11 @@
     <img class="imageResponsive" src="https://cdn.codingjosh.com/anime_stats/misc/umaru_tv.png">
     <p>Life Pro Tip: The time you enjoy wasting, is not wasted time.</p>
   </div>
+  <!-- TODO: break it down by anime media type and show their averages -->
 </div>
 <hr>
 <div class="row">
   <div class="col">
-
+    <!-- TODO: Put most obscure and most mainstream anime watched here -->
   </div>
 </div>
