Started work on obscure anime stats.

--- a/views/data.ejs
+++ b/views/data.ejs
@@ -44,4 +44,7 @@
   <div class="col">
     <!-- TODO: Put most obscure and most mainstream anime watched here -->
   </div>
+  <div class="col">
+    
+  </div>
 </div>
