--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -8,7 +8,7 @@ getCopyrightYear = function() {
 </body>
 
 <footer class="footer-padding">
-  <small>Copyright &copy; <%= getCopyrightYear() %> CodingJosh &mdash; <a href="https://myanimelist.net/profile/CodingJosh" target="_blank">MAL Profile</a></small>
+  <small>Copyright &copy; <%= getCopyrightYear() %> CodingJosh &mdash; <a href="https://myanimelist.net/profile/CodingJosh" target="_blank">MAL Profile</a> &mdash; <a href="https://github.com/YoCodingJosh/anime_stats" target="_blank">GitHub</a></small>
   <br/>
   <small>This website is not affiliated or endorsed by MyAnimeList or any anime studio/producer.</small>
   <br/>
